Revert "Update index.html"
This reverts commit d0de5a91e9fb076fd8702d78c6b3412af3c5af29.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         alt="Miles Hammock
       Profile Pic"
       />
-      <h1>"Welcome to my Portfolio Project!"</h1>
+      <h1>"Welcome to my daily edited website"</h1>
       <p>
         "I've been coding daily for the past week now to eventually start a
         career off as a <span>Web</span> Developer"
