--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
   <body>
     <div class="profile">
       <h1>This section is a little about me</h1>
-      <p>Here are a few of the future titles I hope to attain</p>
+      <p>While studying coding I hope to attain one of the following titles</p>
       <ul>
         <li>Frontend Developer</li>
         <li>Backend Developer</li>
