--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
     </div>
   </body>
   <footer class="profile">
-    <p>"You can find me on all of these networks as well"</p>
+    <p>"Just a few places an end-user can find me online"</p>
     <img src="img/gmail-logo.png" width="80px" height="80px" alt="My Gmail" />
     <img
       src="img/skypelogo.png"
