--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
-  <header class="page-header">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<html lang="en">
+  <head>
     <meta charset="utf-8" />
     <title>Miles Hammock - Portfolio</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
       type="text/css"
@@ -15,44 +15,39 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="css/autostyles.css" />
-    <title>
-      <!--I can write whatever I want in this and it will not show up in browser
-      ;) -->
-    </title>
+  </head>
+  <body>
+    <header>
+      <img src="IMG/logo.jpg" alt="Logo" class="profile" />
+      <nav class="page-header-item">
+        <ul role="menubar" class="navigation-list">
+          <li role="presentation">
+            <a href="index.html" role="menuitem" class="navigation-list_item"
+              >Homepage</a
+            >
+          </li>
+          <li role="presentation">
+            <a href="about.html" role="menuitem" class="naviation-list_item"
+              >About Me</a
+            >
+          </li>
+          <li role="presentation">
+            <a
+              href="contact.html"
+              role="menuitem"
+              class="navigation-list_item--active"
+              >Contact Us</a
+            >
+          </li>
+          <li role="presentation">
+            <a href="work.html" role="menuitem" class="naviation-list_item"
+              >Work
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <div class="profile">
-      <!-- Add your logo here -->
-      <img src="IMG/logo.jpg" alt="Logo" />
-    </div>
-  </header>
-  <nav class="profile">
-    <ul role="menubar" class="navigation-list">
-      <li role="presentation">
-        <a href="index.html" role="menuitem" class="navigation-list_item"
-          >Homepage</a
-        >
-      </li>
-      <li role="presentation">
-        <a href="about.html" role="menuitem" class="naviation-list_item"
-          >About Me</a
-        >
-      </li>
-      <li role="presentation">
-        <a
-          href="contact.html"
-          role="menuitem"
-          class="navigation-list_item--active"
-          >Contact Us</a
-        >
-      </li>
-      <li role="presentation">
-        <a href="work.html" role="menuitem" class="naviation-list_item"
-          >Work
-        </a>
-      </li>
-    </ul>
-  </nav>
-  <body class="profile">
-    <div>
       <form action="/login-form-action" method="post">
         <label for="email">E-mail:</label>
         <input type="email" id="email" name="user_email" />
@@ -81,7 +76,7 @@
       Email:<a href="mailto:miles0569@gmail.com">Email Me Here</a>
     </div>
     <div>
-      <form action="" method="post">
+      <form action="#" method="post">
         <label class="standard-label" for="contact-email">E-mail: </label>
         <input type="email" id="contact-email" required />
 
@@ -101,22 +96,24 @@
         <input type="submit" value="Send message" />
       </form>
     </div>
+    <footer class="page-footer">
+      <p>"You can find me on all of these networks as well"</p>
+      <div class="social-media">
+        <img src="img/gmail-logo.png" class="footer-wh" alt="My Gmail" />
+        <img
+          src="img/skypelogo.png"
+          class="footer-wh"
+          alt="My Personal
+          Skype"
+        />
+        <img
+          src="img/youtubelogo.png"
+          class="footer-wh"
+          alt="Best
+          Youtube Experience"
+        />
+      </div>
+    </footer>
+    <script src="js/tota11y.min.js"></script>
   </body>
-  <footer class="profile">
-    <p>"Just a few places an end-user can find me online"</p>
-    <img src="img/gmail-logo.png" width="80px" height="80px" alt="My Gmail" />
-    <img
-      src="img/skypelogo.png"
-      width="80px"
-      height="80px"
-      alt="My Personal Skype"
-    />
-    <img
-      src="img/youtubelogo.png"
-      width="80px"
-      height="80px"
-      alt="Best Youtube Experience"
-    />
-  </footer>
-  <script src="js/tota11y.min.js"></script>
 </html>
