--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
       <img src="IMG/logo.jpg" alt="Logo" class="profile" />
       <nav class="page-header-item">
         <ul role="menubar" class="navigation-list">
+          <!-- role presentation adds bullet points plus something else?-->
           <li role="presentation">
             <a href="index.html" role="menuitem" class="naviation-list_item"
               >Homepage</a
@@ -52,7 +53,7 @@
         </ul>
       </nav>
     </header>
-    <div class="profile">
+    <div class="profile noBorder">
       <h1>This section is a little about me</h1>
       <p>While studying coding I hope to attain one of the following titles</p>
       <ul>
@@ -64,7 +65,7 @@
 
       <a href="resumeTest.pdf" class="button" download>Download my Resume!</a>
 
-      <div>
+      <div class="noBorder">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="berlin-illustration"
@@ -2167,7 +2168,7 @@
     </table>
     <footer class="page-footer">
       <p>"You can find me on all of these networks as well"</p>
-      <div class="social-media">
+      <div class="social-media noBorder">
         <img src="img/gmail-logo.png" class="footer-wh" alt="My Gmail" />
         <img
           src="img/skypelogo.png"
