--- a/index.html
+++ b/index.html
@@ -17,6 +17,35 @@
     <link rel="stylesheet" type="text/css" href="css/autostyles.css" />
   </head>
   <body>
+    <div class="Lsidebar">
+      <h3>Developer Skills</h3>
+      <ol>
+        <li>Proficent in HTML / CSS / Javascript</li>
+        <li>
+          Proficient Navigating the terminal (Visual Code Studio and Ubuntu)
+        </li>
+        <li>Competent Git and Github</li>
+        <li>
+          Competent in Database Schema / Development (Local, SQL, and MongoDB)
+        </li>
+        <li>Experience with Developing apps using MERN/MEAN Stacks</li>
+        <li>API Development</li>
+      </ol>
+    </div>
+    <div class="Rsidebar">
+      <h3>Up-To-Date News</h3>
+      <ul>
+        <li>
+          Finished course material regarding React and Redux from novice to
+          advanced topics.
+        </li>
+        <li>
+          Updated Profile website implementing side-bars as well as updating box
+          alignment throughout the main index file.
+        </li>
+      </ul>
+    </div>
+
     <header>
       <img src="IMG/logo.jpg" alt="Logo" class="profile" />
       <nav class="page-header-item">
@@ -47,29 +76,35 @@
         </ul>
       </nav>
     </header>
+    <div class="BRsidebar">
+      <h3>Social Web-Links</h3>
+      <li>
+        <a href="https://github.com/IamDreamy" target="_blank">GitHub</a>
+      </li>
+      <div>
+        Tel:<a href="tel:530-537-6521">Phone</a><br />
+        Skype:<a href="skype:live:miles0569">Skype</a><br />
+        Email:<a href="mailto:miles0569@gmail.com">Email</a>
+      </div>
+    </div>
     <div class="profile">
       <!-- Add your self portrait here-->
       <img
         src="IMG/Selfy.jpg"
         class="profile_portrait"
         alt="Miles Hammock
-      Profile Pic"
+        Profile Pic"
       />
-      <h1>"Welcome to my Portfolio Website!"</h1>
+      <h1>Welcome to my Portfolio Website!</h1>
       <p>
-        "I've been coding daily for the past week now to eventually start a
-        career off as a <span>Web</span> Developer"
+        I'm an aspiring Junior Developer who codes daily! The start of my web
+        development journey started in 2016 completing all available material
+        related to my future profession on CodeAcademy. Started Career Foundry
+        in June this year and est. completion by the end of October.
       </p>
-      <a href="#">"Follow my Github HERE"</a>
-    </div>
-    <a href="#">Default Link</a>
-    <button type="button">Default Button</button>
-    <button class="button_secondary">Secondary Button</button>
-    <div>
-      <img src="IMG/background.jpg" class="background-img" alt="" />
     </div>
     <footer class="page-footer">
-      <p>"You can find me on all of these networks as well"</p>
+      <p>"Social Media links above are unresponsive currently!"</p>
       <div class="social-media">
         <img src="img/gmail-logo.png" class="footer-wh" alt="My Gmail" />
         <img
