--- a/work.html
+++ b/work.html
@@ -33,7 +33,7 @@
           </li>
           <li role="presentation">
             <a href="contact.html" role="menuitem" class="navigation-list-item">
-              Contact
+              Contact Us
             </a>
           </li>
           <li role="presentation">
@@ -49,8 +49,8 @@
       </nav>
     </header>
     <section>
-      <h1>My Cool Websites</h1>
-      <div class="portfolio-work">
+      <h1>Portfolio Work</h1>
+      <div class="portfolio-work noBorder">
         <!-- Grid items will live here-->
         <div class="grid-item">
           <h2>Grid Control with CSS</h2>
@@ -59,15 +59,17 @@
             portfolio by creating the HTML and CSS while linking the two for
             seamless performance:
           </p>
-          <a href="https://github.com/IamDreamy">Projects on my GitHub</a>
+          <a href="https://github.com/IamDreamy" target="_blank"
+            >GitHub Repositories</a
+          >
         </div>
         <div class="grid-item">
           <h2>
-            I like to keep connected with all new Web Developers so follow me on
-            my facebook here:
+            Simple Quiz app using the Angular Framework with technologies such
+            as Forms, Material, Router, and TypeScript tools.
           </h2>
-          <a href="https://www.facebook.com/miles.hammock.3"
-            >Personal Facebook</a
+          <a href="https://iamdreamy.github.io/Quiz-App/welcome" target="_blank"
+            >Quiz-App</a
           >
         </div>
         <div class="grid-item">
@@ -79,11 +81,11 @@
         </div>
         <div class="grid-item">
           <h2>
-            If you would like to follow what I do outside of coding follow me on
-            my Insta!
+            Pokedex app which retreives data from an external API and creats a
+            grid system with modules to click and view details.
           </h2>
-          <a href="https://www.instagram.com/iknowimdreamy/?hl=en"
-            >Best Social Media</a
+          <a href="https://iamdreamy.github.io/pokemonJQuery/" target="_blank"
+            >Pokedex App</a
           >
         </div>
       </div>
