--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         />
       </div>
     </footer>
-    <script src="js/tota11y.min.js"></script>
+    <script src="../js/tota11y.min.js"></script>
     <!-- Brings glasses in bottom left of screen for testing attributes within browser(good 
     practice for when testing)-->
   </body>
