Added Background and Changed Font

--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="css/autostyles.css" />
   </head>
   <body>
+    <img src="IMG/background.jpg" alt="background pic" class="backG" />
     <header>
       <img src="IMG/logo.jpg" alt="Logo" class="profile" />
       <nav class="page-header-item">
@@ -2156,13 +2157,18 @@
       <tbody>
         <tr>
           <td>JavaScript</td>
-          <td>0</td>
-          <td>Beginner</td>
+          <td>1</td>
+          <td>Proficient</td>
         </tr>
         <tr>
           <td>HTML</td>
-          <td>0</td>
-          <td>Beginner</td>
+          <td>1</td>
+          <td>Proficient</td>
+        </tr>
+        <tr>
+          <td>CSS</td>
+          <td>1</td>
+          <td>Proficient</td>
         </tr>
       </tbody>
     </table>
