--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="css/autostyles.css" />
   </head>
   <body>
+    <img src="IMG/background.jpg" alt="background pic" class="backG" />
     <header>
       <img src="IMG/logo.jpg" alt="Logo" class="profile" />
       <nav class="page-header-item">
