--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="css/autostyles.css" />
   </head>
   <body>
+    <img src="IMG/background.jpg" alt="background pic" class="backG" />
     <div class="Lsidebar">
       <h3>Developer Skills</h3>
       <ol>
@@ -104,7 +105,7 @@
       </p>
     </div>
     <footer class="page-footer">
-      <p>"Social Media links above are unresponsive currently!"</p>
+      <p>"Social Media links above are currently unresponsive!"</p>
       <div class="social-media">
         <img src="img/gmail-logo.png" class="footer-wh" alt="My Gmail" />
         <img
@@ -121,7 +122,7 @@
         />
       </div>
     </footer>
-    <script src="../js/tota11y.min.js"></script>
+    <script src="js/tota11y.min.js"></script>
     <!-- Brings glasses in bottom left of screen for testing attributes within browser(good 
     practice for when testing)-->
   </body>
