--- a/work.html
+++ b/work.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="css/autostyles.css" />
   </head>
   <body>
+    <img src="IMG/background.jpg" alt="background pic" class="backG" />
     <header>
       <img src="IMG/logo.jpg" alt="Logo" class="profile" />
       <nav class="page-header-item">
@@ -49,7 +50,7 @@
       </nav>
     </header>
     <section>
-      <h1>Portfolio Work</h1>
+      <h1 class="outsetBorder">Portfolio Work</h1>
       <div class="portfolio-work noBorder">
         <!-- Grid items will live here-->
         <div class="grid-item">
