Added Movie App to Portfolio

--- a/about.html
+++ b/about.html
@@ -37,11 +37,7 @@
             >
           </li>
           <li role="presentation">
-            <a
-              href="contact.html"
-              target="_blank"
-              role="menuitem"
-              class="naviation-list_item"
+            <a href="contact.html" role="menuitem" class="naviation-list_item"
               >Contact Us</a
             >
             <!-- Using "target="_blank takes users to selected page on different tab-->
