--- a/work.html
+++ b/work.html
@@ -89,6 +89,17 @@
             >Pokedex App</a
           >
         </div>
+        <div class="grid-item">
+          <h2>
+            My Movie App was built with the React Framework using libraries such
+            as Redux, Bootstrap, and MongoDB for holding and sending data.
+            Currently updating so use (Username - heroku1) and (Password -
+            heroku1) for login.
+          </h2>
+          <a href="https://mjh-myflixapp.herokuapp.com/client/" target="_blank"
+            >Movie App</a
+          >
+        </div>
       </div>
     </section>
     <!-- Footer with linka to social media profiles-->
