Work page update to text

--- a/work.html
+++ b/work.html
@@ -54,12 +54,10 @@
       <div class="portfolio-work noBorder">
         <!-- Grid items will live here-->
         <div class="grid-item">
-          <h2>Grid Control with CSS</h2>
-          <p>
-            My job currently is to complete my entire site to add to my
-            portfolio by creating the HTML and CSS while linking the two for
-            seamless performance:
-          </p>
+          <h2>
+            If you want to stay up-to-date on my current work follow my Github
+            through the link below!
+          </h2>
           <a href="https://github.com/IamDreamy" target="_blank"
             >GitHub Repositories</a
           >
