Adding Vue ToDo List

--- a/work.html
+++ b/work.html
@@ -80,8 +80,9 @@
         </div>
         <div class="grid-item">
           <h2>
-            Pokedex app which retreives data from an external API and creats a
-            grid system with modules to click and view details.
+            Pokedex app which retreives data from an external API and creates a
+            grid system with modules to click and view details. Uses JQuery,
+            Ajax, and Javascript for a production ready build.
           </h2>
           <a href="https://iamdreamy.github.io/pokemonJQuery/" target="_blank"
             >Pokedex App</a
@@ -96,6 +97,15 @@
           </h2>
           <a href="https://mjh-myflixapp.herokuapp.com/client/" target="_blank"
             >Movie App</a
+          >
+        </div>
+        <div class="grid-item">
+          <h2>
+            Simple To-do app using the Vue.js Framework which implements CRUD
+            features to easily read, add, update, and delete tasks.
+          </h2>
+          <a href="https://iamdreamy.github.io/Todo-list/" target="_blank"
+            >To-do App</a
           >
         </div>
       </div>
