Added photos to work cited page

--- a/work.html
+++ b/work.html
@@ -53,58 +53,78 @@
       <h1 class="outsetBorder">Portfolio Work</h1>
       <div class="portfolio-work noBorder">
         <!-- Grid items will live here-->
-        <div class="grid-item">
-          <h2>
+        <div id="grid-item">
+          <img src="IMG/github.png" class="hover" />
+          <h2 class="visi">
             If you want to stay up-to-date on my current work follow my Github
             through the link below!
           </h2>
-          <a href="https://github.com/IamDreamy" target="_blank"
+          <a href="https://github.com/IamDreamy" class="visi" target="_blank"
             >GitHub Repositories</a
           >
         </div>
-        <div class="grid-item">
-          <h2>
-            Simple Quiz app using the Angular Framework with technologies such
-            as Forms, Material, Router, and TypeScript tools.
-          </h2>
-          <a href="https://iamdreamy.github.io/Quiz-App/welcome" target="_blank"
-            >Quiz-App</a
-          >
-        </div>
-        <div class="grid-item">
-          <h2>
-            I enjoy running workshops or studying sessions with new programmers
-            so add me on Skype:
-          </h2>
-          <a href="https://www.skype.com/en/">User: live:miles0569</a>
-        </div>
-        <div class="grid-item">
-          <h2>
-            Pokedex app which retreives data from an external API and creates a
-            grid system with modules to click and view details. Uses JQuery,
-            Ajax, and Javascript for a production ready build.
-          </h2>
-          <a href="https://iamdreamy.github.io/pokemonJQuery/" target="_blank"
-            >Pokedex App</a
-          >
-        </div>
-        <div class="grid-item">
-          <h2>
+        <div id="grid-item">
+          <img src="IMG/movie.png" class="hover" />
+          <h2 class="visi">
             My Movie App was built with the React Framework using libraries such
             as Redux, Bootstrap, and MongoDB for holding and sending data.
             Currently updating so use (Username - heroku1) and (Password -
             heroku1) for login.
           </h2>
-          <a href="https://mjh-myflixapp.herokuapp.com/client/" target="_blank"
+          <a
+            href="https://mjh-myflixapp.herokuapp.com/client/"
+            class="visi"
+            target="_blank"
             >Movie App</a
           >
         </div>
-        <div class="grid-item">
-          <h2>
+        <div id="grid-item">
+          <img src="IMG/pokemon.png" class="hover" />
+          <h2 class="visi">
+            Pokedex app which retreives data from an external API and creates a
+            grid system with modules to click and view details. Uses JQuery,
+            Ajax, and Javascript for a production ready build.
+          </h2>
+          <a
+            href="https://iamdreamy.github.io/pokemonJQuery/"
+            class="visi"
+            target="_blank"
+            >Pokedex App</a
+          >
+        </div>
+        <div id="grid-item">
+          <img src="IMG/skype.png" class="hover" />
+          <h2 class="visi">
+            I enjoy running workshops or studying sessions with new programmers
+            so add me on Skype:
+          </h2>
+          <a href="https://www.skype.com/en/" class="visi" target="_blank"
+            >User: live:miles0569</a
+          >
+        </div>
+        <div id="grid-item">
+          <img src="IMG/quiz.png" class="hover" />
+          <h2 class="visi">
+            Simple Quiz app using the Angular Framework with technologies such
+            as Forms, Material, Router, and TypeScript tools.
+          </h2>
+          <a
+            href="https://iamdreamy.github.io/Quiz-App/welcome"
+            class="visi"
+            target="_blank"
+            >Quiz-App</a
+          >
+        </div>
+        <div id="grid-item">
+          <img src="IMG/todo.png" class="hover" />
+          <h2 class="visi">
             Simple To-do app using the Vue.js Framework which implements CRUD
             features to easily read, add, update, and delete tasks.
           </h2>
-          <a href="https://iamdreamy.github.io/Todo-list/" target="_blank"
+          <a
+            href="https://iamdreamy.github.io/Todo-list/"
+            class="visi"
+            target="_blank"
             >To-do App</a
           >
         </div>
