Updated Work page to include base code from Github

--- a/about.html
+++ b/about.html
@@ -2170,20 +2170,26 @@
     </table>
     <footer class="page-footer">
       <p>"You can find me on all of these networks as well"</p>
-      <div class="social-media noBorder">
-        <img src="img/gmail-logo.png" class="footer-wh" alt="My Gmail" />
-        <img
-          src="img/skypelogo.png"
-          class="footer-wh"
-          alt="My Personal
+      <div class="social-media">
+        <a href="mailto:hammockwebdev@gmail.com"
+          ><img src="img/gmail-logo.png" class="footer-wh" alt="My Gmail"
+        /></a>
+        <a href="skype:live:miles0569"
+          ><img
+            src="img/skypelogo.png"
+            class="footer-wh"
+            alt="My Personal
           Skype"
-        />
-        <img
-          src="img/youtubelogo.png"
-          class="footer-wh"
-          alt="Best
+        /></a>
+        <a
+          href="https://www.youtube.com/channel/UCkZDpYgmRrsytekcz99EdBw?"
+          target="_blank"
+          ><img
+            src="img/youtubelogo.png"
+            class="footer-wh"
+            alt="Best
           Youtube Experience"
-        />
+        /></a>
       </div>
     </footer>
     <script src="js/tota11y.min.js"></script>
