--- a/index.html
+++ b/index.html
@@ -105,21 +105,27 @@
       </p>
     </div>
     <footer class="page-footer">
-      <p>"Social Media links above are currently unresponsive!"</p>
+      <p>"You can find me on all of these networks as well"</p>
       <div class="social-media">
-        <img src="img/gmail-logo.png" class="footer-wh" alt="My Gmail" />
-        <img
-          src="img/skypelogo.png"
-          class="footer-wh"
-          alt="My Personal
+        <a href="mailto:hammockwebdev@gmail.com"
+          ><img src="img/gmail-logo.png" class="footer-wh" alt="My Gmail"
+        /></a>
+        <a href="skype:live:miles0569"
+          ><img
+            src="img/skypelogo.png"
+            class="footer-wh"
+            alt="My Personal
           Skype"
-        />
-        <img
-          src="img/youtubelogo.png"
-          class="footer-wh"
-          alt="Best
+        /></a>
+        <a
+          href="https://www.youtube.com/channel/UCkZDpYgmRrsytekcz99EdBw?"
+          target="_blank"
+          ><img
+            src="img/youtubelogo.png"
+            class="footer-wh"
+            alt="Best
           Youtube Experience"
-        />
+        /></a>
       </div>
     </footer>
     <script src="js/tota11y.min.js"></script>
