--- a/work.html
+++ b/work.html
@@ -62,6 +62,12 @@
           <a href="https://github.com/IamDreamy" class="visi" target="_blank"
             >GitHub Repositories</a
           >
+          <a
+            href="https://github.com/IamDreamy/portfolio-website"
+            class="visi"
+            target="_blank"
+            >Code to Current Website</a
+          >
         </div>
         <div id="grid-item">
           <img src="IMG/movie.png" class="hover" />
@@ -75,7 +81,13 @@
             href="https://mjh-myflixapp.herokuapp.com/client/"
             class="visi"
             target="_blank"
-            >Movie App</a
+            >Movie App Website</a
+          >
+          <a
+            href="https://github.com/IamDreamy/MyFlixDB"
+            target="_blank"
+            class="visi"
+            >Github Code</a
           >
         </div>
         <div id="grid-item">
@@ -89,7 +101,13 @@
             href="https://iamdreamy.github.io/pokemonJQuery/"
             class="visi"
             target="_blank"
-            >Pokedex App</a
+            >Pokedex App Website</a
+          >
+          <a
+            href="https://github.com/IamDreamy/pokemonJQuery"
+            class="visi"
+            target="_blank"
+            >Github Code</a
           >
         </div>
         <div id="grid-item">
@@ -114,6 +132,12 @@
             target="_blank"
             >Quiz-App</a
           >
+          <a
+            href="https://github.com/IamDreamy/Quiz-App"
+            class="visi"
+            target="_blank"
+            >Github Code</a
+          >
         </div>
         <div id="grid-item">
           <img src="IMG/todo.png" class="hover" />
@@ -127,6 +151,12 @@
             target="_blank"
             >To-do App</a
           >
+          <a
+            href="https://github.com/IamDreamy/Todo-list"
+            class="visi"
+            target="_blank"
+            >Github Code</a
+          >
         </div>
       </div>
     </section>
@@ -134,19 +164,25 @@
     <footer class="page-footer">
       <p>"You can find me on all of these networks as well"</p>
       <div class="social-media">
-        <img src="img/gmail-logo.png" class="footer-wh" alt="My Gmail" />
-        <img
-          src="img/skypelogo.png"
-          class="footer-wh"
-          alt="My Personal
+        <a href="mailto:hammockwebdev@gmail.com"
+          ><img src="img/gmail-logo.png" class="footer-wh" alt="My Gmail"
+        /></a>
+        <a href="skype:live:miles0569"
+          ><img
+            src="img/skypelogo.png"
+            class="footer-wh"
+            alt="My Personal
           Skype"
-        />
-        <img
-          src="img/youtubelogo.png"
-          class="footer-wh"
-          alt="Best
+        /></a>
+        <a
+          href="https://www.youtube.com/channel/UCkZDpYgmRrsytekcz99EdBw?"
+          target="_blank"
+          ><img
+            src="img/youtubelogo.png"
+            class="footer-wh"
+            alt="Best
           Youtube Experience"
-        />
+        /></a>
       </div>
     </footer>
     <script src="js/tota11y.min.js"></script>
