Update text in movie api work page

--- a/work.html
+++ b/work.html
@@ -75,7 +75,7 @@
             My Movie App was built with the React Framework using libraries such
             as Redux, Bootstrap, and MongoDB for holding and sending data.
             Currently updating so use (Username - heroku1) and (Password -
-            heroku1) for login.
+            heroku1) if register is unusable.
           </h2>
           <a
             href="https://mjh-myflixapp.herokuapp.com/client/"
