Update text on work site

--- a/work.html
+++ b/work.html
@@ -130,7 +130,7 @@
             href="https://iamdreamy.github.io/Quiz-App/welcome"
             class="visi"
             target="_blank"
-            >Quiz-App</a
+            >Quiz-App Website</a
           >
           <a
             href="https://github.com/IamDreamy/Quiz-App"
@@ -149,7 +149,7 @@
             href="https://iamdreamy.github.io/Todo-list/"
             class="visi"
             target="_blank"
-            >To-do App</a
+            >To-do App Website</a
           >
           <a
             href="https://github.com/IamDreamy/Todo-list"
